Exposing image providers

--- a/tests/qmlimageviewer/data/CMakeLists.txt
+++ b/tests/qmlimageviewer/data/CMakeLists.txt
@@ -7,4 +7,6 @@
 
 install(FILES main.qml       DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_qmlimageviewer)
 install(FILES ObjectIntrospection.qml       DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_qmlimageviewer)
+install(FILES ImageCollectionView.qml       DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_qmlimageviewer)
+install(FILES PhotoDelegate.qml       DESTINATION ${DATA_INSTALL_DIR}/kipiplugin_qmlimageviewer)
 
