--- a/common/libkipiplugins/o2/examples/CMakeLists.txt
+++ b/common/libkipiplugins/o2/examples/CMakeLists.txt
@@ -7,3 +7,7 @@ endif(o2_WITH_FACEBOOK)
 if(o2_WITH_TWITTER)
     add_subdirectory(twitterdemo)
 endif(o2_WITH_TWITTER)
+
+if(o2_WITH_SPOTIFY)
+    add_subdirectory(spotifydemo)
+endif(o2_WITH_SPOTIFY)
