first step to porting Flickr service to OAuth removing no longer existing Zooomr service disable currently 23 service BUGS: 381664 FIXED-IN: 5.7.0

--- a/common/libkipiplugins/CMakeLists.txt
+++ b/common/libkipiplugins/CMakeLists.txt
@@ -58,9 +58,9 @@ set(o2_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o0abstractstore.h
     ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o0globals.h
     # Enable when needed
-    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1requestor.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1timedreply.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1requestor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1timedreply.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1twitter.h
     #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/oxtwitter.cpp
     #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1dropbox.h
