--- a/common/libkipiplugins/tools/kpversion.h.cmake.in
+++ b/common/libkipiplugins/tools/kpversion.h.cmake.in
@@ -6,7 +6,7 @@
  * Date        : 2006-14-09
  * Description : Kipi-Plugins release ID header.
  *
- * Copyright (C) 2006-2016 by Gilles Caulier <caulier dot gilles at gmail dot com>
+ * Copyright (C) 2006-2017 by Gilles Caulier <caulier dot gilles at gmail dot com>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -46,21 +46,13 @@ static inline const QString kipipluginsVersion()
 static inline KLocalizedString additionalInformation()
 {
     QString gitVer       = pluginsVersion::gitVersion();
-    KLocalizedString ret = ki18n("IRC:\n"
-                                 "irc.freenode.net - #kde-imaging\n\n"
-                                 "Feedback:\n"
-                                 "kde-imaging@kde.org\n\n"
-                                 "Build date: %1 (target: %2)")
+    KLocalizedString ret = ki18n("Build date: %1 (target: %2)")
                                  .subs(QString::fromUtf8(__DATE__))
                                  .subs(QString::fromUtf8("@CMAKE_BUILD_TYPE@"));
 
     if (!gitVer.isEmpty() && !gitVer.startsWith(QString::fromUtf8("unknow")) && !gitVer.startsWith(QString::fromUtf8("export")))
     {
-        ret = ki18n("IRC:\n"
-                    "irc.freenode.net - #kde-imaging\n\n"
-                    "Feedback:\n"
-                    "kde-imaging@kde.org\n\n"
-                    "Build date: %1 (target: %2)\n"
+        ret = ki18n("Build date: %1 (target: %2)\n"
                     "Rev.: %3")
                     .subs(QString::fromUtf8(__DATE__))
                     .subs(QString::fromUtf8("@CMAKE_BUILD_TYPE@"))
