Move sendImages plugin back to the Export category
Summary:
BUG: 382647

Moved the SendImages ("Email Images...") plugin back to the Export category, which is a more appropriate place for it than Tools. This also fixes 382647.

Test Plan:
Tested in KDE Neon. The plugin is now in the Export category, and hence appears correctly in Gwenview's Share button:
{F5487391}

Reviewers: rkflx, mqualmann, cgilles

Subscribers: cgilles

Differential Revision: https://phabricator.kde.org/D8762

--- a/sendimages/kipiplugin_sendimagesui.rc
+++ b/sendimages/kipiplugin_sendimagesui.rc
@@ -1,11 +1,11 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui version="3" name="kipiplugin_sendimages" >
+<gui version="4" name="kipiplugin_sendimages" >
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
 
     <MenuBar>
 
-        <Menu name="Tools"><text>&amp;Tools</text>
-            <Action name="sendimages" group="kipi_tool_group" />
+        <Menu name="Export"><text>&amp;Export</text>
+            <Action name="sendimages" group="kipi_export_group" />
         </Menu>
 
     </MenuBar>
