Drop use of DETECT_LIBKVKONTAKTE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(KF5_MIN_VERSION      "5.18.0")
 set(QT_MIN_VERSION       "5.6.0")
 set(KIPI_MIN_VERSION     "5.0.0")
 set(MEDIAWIKI_MIN_VERSION "5.0.0")
+set(VKONTAKTE_MIN_VERSION "4.70.0")
 cmake_minimum_required(VERSION ${CMAKE_MIN_VERSION})
 
 ############## ECM setup ######################
@@ -160,7 +161,7 @@ message(STATUS "libkipi SO version    : ${KIPI_LIB_SO_CUR_VERSION}")
 # -- Optional dependencies detection required by some plugins -------------------------------------
 
 find_package(KF5MediaWiki ${MEDIAWIKI_MIN_VERSION})
-DETECT_LIBKVKONTAKTE(4.70.0)                                               # For VKontakte.
+find_package(KF5Vkontakte ${VKONTAKTE_MIN_VERSION})
 
 # ==================================================================================================
 # Log messages
